tests/ui/nll/coroutine-upvar-mutability.stderr
error[E0384]: cannot assign twice to immutable variable `x`
  --> $DIR/coroutine-upvar-mutability.rs:10:9
   |
LL |     let x = 0;
   |         - first assignment to `x`
...
LL |         x = 1;
   |         ^^^^^ cannot assign twice to immutable variable

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0384`.
